remise en forme ecran. introduction note archers. nouvelle table note_archer

--- a/app/src/main/res/layout-land/activity_image_resultat.xml
+++ b/app/src/main/res/layout-land/activity_image_resultat.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/air_round"
-        android:layout_width="160dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/roundName"
@@ -50,6 +50,7 @@
     <ImageView
         android:id="@+id/air_image"
         android:layout_width="0dp"
+        android:layout_marginTop="5dp"
         android:layout_height="match_parent"
         app:layout_constraintDimensionRatio="1"
         android:gravity="center"
@@ -62,8 +63,8 @@
         android:id="@+id/air_layoutImage"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="28dp"
-        app:layout_constraintDimensionRatio="1"
+        android:layout_marginTop="5dp"
+        app:layout_constraintDimensionRatio="1.1"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -74,6 +75,7 @@
         tools:ignore="MissingConstraints">
 
     </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
