--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -9,35 +9,20 @@
 
     <EditText
         android:id="@+id/result"
-        android:layout_width="166dp"
+        android:layout_width="0dp"
         android:layout_height="156dp"
         android:layout_marginStart="34dp"
         android:background="@drawable/it_style"
         android:ems="10"
+        android:layout_weight="1.5"
         android:focusable="false"
         android:gravity="end"
         android:inputType="textMultiLine"
         android:textSize="12sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/imageCible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageCible"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_weight="1"
-        android:background="@drawable/ic_cible"
-        app:layout_scrollFlags="scroll|enterAlways"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1"
-        app:layout_constraintStart_toEndOf="@+id/result"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
-
 
     <Spinner
         android:id="@+id/archer"
@@ -54,24 +39,46 @@
         android:id="@+id/ArrowValue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/arrow"
-        android:layout_marginStart="80dp"
         android:layout_marginTop="80dp"
-        android:textSize="50sp"
         android:background="@drawable/am_arrow_style"
         android:gravity="center"
+        android:text="@string/arrow"
         android:textAlignment="center"
-        app:layout_constraintDimensionRatio="1"
+        android:textSize="50sp"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintStart_toStartOf="@+id/result"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TableLayout
-        android:layout_width="126dp"
+
+
+    <ImageView
+        android:id="@+id/imageCible"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="1"
+        android:background="@drawable/ic_cible"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintStart_toEndOf="@+id/result"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/TableLayout1"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_scrollFlags="scroll|enterAlways" />
+
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/TableLayout1"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
+        android:layout_weight="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.894"
         app:layout_constraintStart_toEndOf="@id/imageCible"
@@ -79,7 +86,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -104,7 +111,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -129,7 +136,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -154,7 +161,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -181,7 +188,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -208,7 +215,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -235,7 +242,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -259,12 +266,12 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <TextView
-                android:id="@+id/endNumberT"
+                android:id="@+id/textEnd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
@@ -279,6 +286,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
+                android:layout_weight="1"
                 android:hint="End"
                 android:textSize="12sp"
                 android:textStyle="bold" />
