--- a/app/src/main/res/layout/activity_apropos.xml
+++ b/app/src/main/res/layout/activity_apropos.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:id="@+id/app_version"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:contentDescription="Version"
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
