--- a/app/src/main/res/layout/activity_config_round.xml
+++ b/app/src/main/res/layout/activity_config_round.xml
@@ -195,6 +195,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tableRow4"
         app:layout_constraintTop_toBottomOf="@id/tableRow2">
 
         <TextView
@@ -213,6 +214,29 @@
             android:background="@drawable/am_buttonshape_grey">
 
         </ListView>
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow4"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_weight="2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tableRow3">
+
+        <EditText
+            android:id="@+id/roundQualifier"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/RoundQualifier"
+            android:hint="@string/RoundQualifier"
+            android:ems="10"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+
     </TableRow>
 
 
