--- a/app/src/main/res/layout/activity_resultat_image.xml
+++ b/app/src/main/res/layout/activity_resultat_image.xml
@@ -76,5 +76,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/air_choix_resultat_" />
 
+    <EditText
+        android:id="@+id/res_i_round_filter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/resRoundFilter"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
