--- a/app/src/main/res/layout/activity_resultat_round.xml
+++ b/app/src/main/res/layout/activity_resultat_round.xml
@@ -8,7 +8,7 @@
 
     <Spinner
         android:id="@+id/res_spinner_round"
-        android:layout_width="418dp"
+        android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginTop="32dp"
         android:layout_weight="1"
@@ -19,9 +19,9 @@
 
     <Spinner
         android:id="@+id/res_spinner_archer"
-        android:layout_width="424dp"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:layout_marginStart="16dp"
+
         android:layout_marginTop="16dp"
         android:layout_weight="3"
         android:background="@drawable/it_style"
@@ -38,12 +38,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/res_spinner_round" />
 
-    <ImageView
-        android:id="@+id/res_image_resultat"
+    <EditText
+        android:id="@+id/res_round_filter"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/res_lis_resultat"
-        app:layout_constraintVertical_bias="0.43" />
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/resRoundFilter"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
