--- a/app/src/main/res/layout/activity_maintenance.xml
+++ b/app/src/main/res/layout/activity_maintenance.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/spinPointingOffset"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity_maintenance">
@@ -96,6 +97,31 @@
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/table">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+
+            <EditText
+                android:id="@+id/pointageOffset"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/it_style"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="@string/pointageOffsetDesc"
+                android:inputType="number"
+                android:singleLine="true"
+                android:text="@string/pointageOffset"
+                android:textAlignment="center"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:autofillHints="2" />
+
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
